syntax = "proto3";
package grpc;

option go_package = "https://github.com/lilkimo/INF343-Tarea-3/protoBrokerInformantes";

/*Comando de mensaje*/
message MensajeToBroker{
    string ipServidorFulcrum = 1;
}
/*Respuesta*/
message Respuesta {
    string direccion = 1;
}

service ConnToBrokerFromInformante {
    rpc ObtenerDireccion(MensajeToBroker) returns (Respuesta);
}